[metadata]
name = valis_wsi
version = attr: valis.__version__
author = Chandler Gatenbee
author_email = Chandler.Gatenbee@moffitt.org
description = A package to register whole slide images
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://valis.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/MathOnco/valis/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    beautifulsoup4
    bioformats_jar
    colorama
    colour-science
    fastcluster
    interpolation
    joblib
    JPype1
    matplotlib
    numba
    numpy
    ome_types
    opencv-contrib-python
    pandas
    Pillow
    pyvips
    scikit_image
    scikit_learn
    scipy
    Shapely
    SimpleITK
    tqdm
    weightedstats
